--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <br>
 <a  href="https://5e.tools/" target="_blank">
-<img src="D&D.jpg" alt="a picture a D&D party fighting" class="DnDpic">
+<img src="D&D.jpg" alt="a picture a D&D party fighting" id="DnDpic">
 </a>
 </body>
 </html>
